@@ -12,6 +12,7 @@ MINOR:
   * ssm(): new argument "padWith" for dealing with edges and "heights" for controlling relative plot sizes
   * flatEnv(): fixed a bug that preventing correct removal of DC offset ("killDC")
   * generateNoise(): proper interpolation of user-specified "spectralEnvelope" (renamed from "filterNoise")
+  * addFormants(): support for user-specified "spectralEnvelope" (a new argument)
   * soundgen(): adjusted bandwidth calculation for very low formant frequencies (under 250 Hz)
   * soundgen_app(): fixed a bug introduced in 1.3.0 that caused the app to crash when switching to a new preset
 
